css/landingstyle.css
body {
  background-image: url('./../assets/landing-bg.png');
  background-repeat: no-repeat;
  width: 100%;
  font-family: 'Arial';
  overflow: hidden;
}

.body-block {
  width: 45%;
  top: 50%;
  left: 50%;
  margin-left: auto;
  margin-right: 8%;
  margin-top: 12%;
  width: 40%;
  background-color: #211f20;
}
.about {
  color: white;
  font-size: 20px;
}

.landing-image {
  position: absolute;
  z-index: 2;
  bottom: -100px;
  width: 45%;
}

h1 {
  color: white;
  -webkit-text-stroke: 1px black;
  font-size: 25.46vw;
  margin: 0px;
  padding: 0px;
  font-weight: lighter;
  width: 100%;
  line-height: 300px;
}

.start {
  background-color: rgba(0, 0, 0, 0);
  border: 2px solid rgba(255, 255, 255, 0.4);
  border-radius: 10px;
  color: white;
  font-size: 20px;
  padding: 10px;
  display: block;
  margin-top: 60px;
  margin-left: auto;
  margin-right: auto;
  top: 160px;
}

.start:hover {
  background-color: white;
  color: black;
}

.start-app {
  position: absolute;
  background-color: #2c2628;
  border: 2px solid rgba(255, 255, 255, 0.4);
  border-radius: 10px;
  color: white;
  font-size: 20px;
  padding: 10px;
  right: 22%;
  bottom: 10%;
  visibility: hidden;
}

.start-app:hover {
  background-color: white;
  color: black;
}

#calendar {
  z-index: 3;
  position: absolute;
  width: 40%;
  height: 65%;
  right: 8%;
  top: 15%;
  /* float: right; */
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  visibility: hidden;
}

.toastui-calendar-popup-container {
  position: absolute;
  left: -10px !important;
}

.toastui-calendar-timegrid-now-indicator-today {
  border-top: 3px dotted white !important;
}

.toastui-calendar-day-view-day-names {
  display: none !important;
}

.toastui-calendar-panel {
  height: 100% !important;
  opacity: 80%;
}

.toastui-calendar-day-view {
  z-index: 2;
  background-color: rgba(18, 25, 42, 0.8) !important;
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
  border: 2px solid rgba(255, 255, 255, 0.1);
}

.toastui-calendar-template-time {
  font-size: 14px;
}

.toastui-calendar-grid-selection-label {
  color: white !important;
}

.toastui-calendar-event-time {
  border-left-color: rgba(7, 34, 58, 0.9) !important;
  border-radius: 7px !important;
}

.toastui-calendar-gridline-half {
  border-bottom: 1px solid rgb(255, 255, 255, 0.2) !important;
}

.toastui-calendar-grid-selection {
  border-radius: 7px !important;
}

@media (max-width: 1000px) {
  .landing-image {
    visibility: hidden;
  }
  .body-block {
    margin-left: 20%;
    width: 60%;
  }
  .start {
    margin-top: 70px;
  }
  h1 {
    line-height: 200px;
  }
  #calendar {
    width: 80%;
  }
  .start-app {
    right: 35%;
  }
}

